1510619449 | 59 files | M bin/version.txt,  M content/panorama/localization/tenfoot_danish.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_german.txt,  M content/panorama/localization/tenfoot_greek.txt,  M content/panorama/localization/tenfoot_polish.txt,  M content/panorama/localization/tenfoot_romanian.txt,  M content/panorama/localization/tenfoot_russian.txt,  M content/panorama/localization/tenfoot_schinese.txt,  M content/panorama/localization/tenfoot_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrm
https://steamdb.info/patchnotes/2281558/

--- a/content/panorama/localization/tenfoot_danish.txt
+++ b/content/panorama/localization/tenfoot_danish.txt
@@ -618,16 +618,30 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"VENTER..."
 "[english]Now_Waiting"	"WAITING..."
+"HomeAppCheck"	"Forbedrede SteamVR-miljøer"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"De nye SteamVR-miljøer understøtter mere detaljerede hjemsteder, sociale funktioner og mere. Tilmeld dig for at teste og give feedback i SteamVR-foraene."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Dæmpet"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"TILBAGE TIL APP"
 "[english]BackToApp"	"BACK TO APP"
+"GoHome"	"GÅ HJEM"
+"[english]GoHome"	"GO HOME"
 "QuitApp"	"AFSLUT APP"
 "[english]QuitApp"	"QUIT APP"
+"Customization_Disclaimer"	"Hvis Forbedrede SteamVR-miljøer er slået til, kan du bruge menuen i appen til at tilpasse dit hjemsted."
+"[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
 "VRSettingsKnucklesTitle"	"Knuckles"
 "[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Kapacitiv sensor-tilstand"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
 "KnucklesCapsenseMode_0"	"Fingersporing (standard)"
 "[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
 "KnucklesCapsenseMode_1"	"Fingersporing slået fra"
 "[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Kapacitiv sensor styrer aftrækker"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Kapacitiv sensor styrer greb"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
