--- a/content/panorama/localization/tenfoot_german.txt
+++ b/content/panorama/localization/tenfoot_german.txt
@@ -636,8 +636,14 @@
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
 "VRSettingsKnucklesTitle"	"Knuckles"
 "[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Kapazitive-Sensoren-Modus"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
 "KnucklesCapsenseMode_0"	"Fingererfassung (Standard)"
 "[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
 "KnucklesCapsenseMode_1"	"Fingererfassung deaktiviert"
 "[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Kapazitive Sensoren als Trigger"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Kapazitive Sensoren zum Greifen"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
