--- a/content/panorama/localization/tenfoot_greek.txt
+++ b/content/panorama/localization/tenfoot_greek.txt
@@ -158,9 +158,9 @@
 "[english]Panorama_Lang_Greek"	"Greek"
 "Panorama_Lang_Korean"	"ΚΟΡΕΑΤΙΚΑ"
 "[english]Panorama_Lang_Korean"	"Korean"
-"Panorama_Lang_Simplified_Chinese"	"Απλοποιημένα Κινέζικα"
+"Panorama_Lang_Simplified_Chinese"	"Απλοποιημένα Κινεζικά"
 "[english]Panorama_Lang_Simplified_Chinese"	"Simplified Chinese"
-"Panorama_Lang_Traditional_Chinese"	"Παραδοσιακά Κινέζικα"
+"Panorama_Lang_Traditional_Chinese"	"Παραδοσιακά Κινεζικά"
 "[english]Panorama_Lang_Traditional_Chinese"	"Traditional Chinese"
 "Panorama_Lang_Russian"	"ΡΩΣΙΚΑ"
 "[english]Panorama_Lang_Russian"	"Russian"
