--- a/content/panorama/localization/tenfoot_romanian.txt
+++ b/content/panorama/localization/tenfoot_romanian.txt
@@ -2,7 +2,7 @@
 {
 "UI_Submit"	"Trimite"
 "[english]UI_Submit"	"Submit"
-"UI_Select"	"SELECTEAZĂ"
+"UI_Select"	"Selectează"
 "[english]UI_Select"	"Select"
 "UI_Inspect"	"Inspectează"
 "[english]UI_Inspect"	"Inspect"
@@ -50,7 +50,7 @@
 "[english]UI_Unknown"	"UNKNOWN"
 "UI_Always"	"MEREU"
 "[english]UI_Always"	"ALWAYS"
-"UI_Select_Footer"	"SELECTEAZĂ"
+"UI_Select_Footer"	"Selectează"
 "[english]UI_Select_Footer"	"SELECT"
 "UI_Cancel_Footer"	"Anulează"
 "[english]UI_Cancel_Footer"	"CANCEL"
@@ -146,33 +146,33 @@
 "[english]UI_Age_Gate_Continue"	"CONTINUE"
 "Panorama_Lang_English"	"Engleză"
 "[english]Panorama_Lang_English"	"English"
-"Panorama_Lang_Spanish"	"SPANIOLĂ"
+"Panorama_Lang_Spanish"	"Spaniolă"
 "[english]Panorama_Lang_Spanish"	"Spanish"
-"Panorama_Lang_French"	"FRANCEZĂ"
+"Panorama_Lang_French"	"Franceză"
 "[english]Panorama_Lang_French"	"French"
-"Panorama_Lang_Italian"	"ITALIANĂ"
+"Panorama_Lang_Italian"	"Italiană"
 "[english]Panorama_Lang_Italian"	"Italian"
-"Panorama_Lang_German"	"GERMANĂ"
+"Panorama_Lang_German"	"Germană"
 "[english]Panorama_Lang_German"	"German"
-"Panorama_Lang_Greek"	"GREACĂ"
+"Panorama_Lang_Greek"	"Greacă"
 "[english]Panorama_Lang_Greek"	"Greek"
-"Panorama_Lang_Korean"	"COREEANĂ"
+"Panorama_Lang_Korean"	"Coreeană"
 "[english]Panorama_Lang_Korean"	"Korean"
 "Panorama_Lang_Simplified_Chinese"	"Chineză simplificată"
 "[english]Panorama_Lang_Simplified_Chinese"	"Simplified Chinese"
 "Panorama_Lang_Traditional_Chinese"	"Chineză tradiţională"
 "[english]Panorama_Lang_Traditional_Chinese"	"Traditional Chinese"
-"Panorama_Lang_Russian"	"RUSĂ"
+"Panorama_Lang_Russian"	"Rusă"
 "[english]Panorama_Lang_Russian"	"Russian"
-"Panorama_Lang_Thai"	"THAILANDEZĂ"
+"Panorama_Lang_Thai"	"Thailandeză"
 "[english]Panorama_Lang_Thai"	"Thai"
-"Panorama_Lang_Japanese"	"JAPONEZĂ"
+"Panorama_Lang_Japanese"	"Japoneză"
 "[english]Panorama_Lang_Japanese"	"Japanese"
-"Panorama_Lang_Portuguese"	"PORTUGHEZĂ"
+"Panorama_Lang_Portuguese"	"Portugheză"
 "[english]Panorama_Lang_Portuguese"	"Portuguese"
 "Panorama_Lang_Brazilian"	"Portugheză-Brazilia"
 "[english]Panorama_Lang_Brazilian"	"Portuguese-Brazil"
-"Panorama_Lang_Polish"	"POLONEZĂ"
+"Panorama_Lang_Polish"	"Poloneză"
 "[english]Panorama_Lang_Polish"	"Polish"
 "Panorama_Lang_Danish"	"Daneză"
 "[english]Panorama_Lang_Danish"	"Danish"
@@ -180,25 +180,25 @@
 "[english]Panorama_Lang_Dutch"	"Dutch"
 "Panorama_Lang_Finnish"	"Finlandeză"
 "[english]Panorama_Lang_Finnish"	"Finnish"
-"Panorama_Lang_Norwegian"	"NORVEGIANĂ"
+"Panorama_Lang_Norwegian"	"Norvegiană"
 "[english]Panorama_Lang_Norwegian"	"Norwegian"
-"Panorama_Lang_Swedish"	"SUEDEZĂ"
+"Panorama_Lang_Swedish"	"Suedeză"
 "[english]Panorama_Lang_Swedish"	"Swedish"
 "Panorama_Lang_Czech"	"Cehă"
 "[english]Panorama_Lang_Czech"	"Czech"
-"Panorama_Lang_Hungarian"	"MAGHIARĂ"
+"Panorama_Lang_Hungarian"	"Maghiară"
 "[english]Panorama_Lang_Hungarian"	"Hungarian"
-"Panorama_Lang_Romanian"	"ROMÂNĂ"
+"Panorama_Lang_Romanian"	"Română"
 "[english]Panorama_Lang_Romanian"	"Romanian"
 "Panorama_Lang_Bulgarian"	"Bulgară"
 "[english]Panorama_Lang_Bulgarian"	"Bulgarian"
-"Panorama_Lang_Turkish"	"TURCĂ"
+"Panorama_Lang_Turkish"	"Turcă"
 "[english]Panorama_Lang_Turkish"	"Turkish"
 "Panorama_Lang_Arabic"	"Arabic"
 "[english]Panorama_Lang_Arabic"	"Arabic"
-"Panorama_Lang_Ukrainian"	"UCRAINEANĂ"
+"Panorama_Lang_Ukrainian"	"Ucraineană"
 "[english]Panorama_Lang_Ukrainian"	"Ukrainian"
-"Panorama_Lang_Footer_English"	"Engleză"
+"Panorama_Lang_Footer_English"	"ENGLEZĂ"
 "[english]Panorama_Lang_Footer_English"	"ENGLISH"
 "Panorama_Lang_Footer_Spanish"	"SPANIOLĂ"
 "[english]Panorama_Lang_Footer_Spanish"	"SPANISH"
@@ -228,23 +228,23 @@
 "[english]Panorama_Lang_Footer_Brazilian"	"PORTUGUESE-B"
 "Panorama_Lang_Footer_Polish"	"POLONEZĂ"
 "[english]Panorama_Lang_Footer_Polish"	"POLISH"
-"Panorama_Lang_Footer_Danish"	"Daneză"
+"Panorama_Lang_Footer_Danish"	"DANEZĂ"
 "[english]Panorama_Lang_Footer_Danish"	"DANISH"
-"Panorama_Lang_Footer_Dutch"	"Olandeză"
+"Panorama_Lang_Footer_Dutch"	"OLANDEZĂ"
 "[english]Panorama_Lang_Footer_Dutch"	"DUTCH"
-"Panorama_Lang_Footer_Finnish"	"Finlandeză"
+"Panorama_Lang_Footer_Finnish"	"FINLANDEZĂ"
 "[english]Panorama_Lang_Footer_Finnish"	"FINNISH"
 "Panorama_Lang_Footer_Norwegian"	"NORVEGIANĂ"
 "[english]Panorama_Lang_Footer_Norwegian"	"NORWEGIAN"
 "Panorama_Lang_Footer_Swedish"	"SUEDEZĂ"
 "[english]Panorama_Lang_Footer_Swedish"	"SWEDISH"
-"Panorama_Lang_Footer_Czech"	"Cehă"
+"Panorama_Lang_Footer_Czech"	"CEHĂ"
 "[english]Panorama_Lang_Footer_Czech"	"CZECH"
 "Panorama_Lang_Footer_Hungarian"	"MAGHIARĂ"
 "[english]Panorama_Lang_Footer_Hungarian"	"HUNGARIAN"
 "Panorama_Lang_Footer_Romanian"	"ROMÂNĂ"
 "[english]Panorama_Lang_Footer_Romanian"	"ROMANIAN"
-"Panorama_Lang_Footer_Bulgarian"	"Bulgară"
+"Panorama_Lang_Footer_Bulgarian"	"BULGARĂ"
 "[english]Panorama_Lang_Footer_Bulgarian"	"BULGARIAN"
 "Panorama_Lang_Footer_Turkish"	"TURCĂ"
 "[english]Panorama_Lang_Footer_Turkish"	"TURKISH"
@@ -284,7 +284,7 @@
 "[english]Panorama_Selection_Danish"	"Dansk (Danish)"
 "Panorama_Selection_Dutch"	"Nederlands (Olandeză)"
 "[english]Panorama_Selection_Dutch"	"Nederlands (Dutch)"
-"Panorama_Selection_Finnish"	"Finlandeză (Suomi)"
+"Panorama_Selection_Finnish"	"Suomi (Finlandeză)"
 "[english]Panorama_Selection_Finnish"	"Suomi (Finnish)"
 "Panorama_Selection_Norwegian"	"Norsk (Norvegiană)"
 "[english]Panorama_Selection_Norwegian"	"Norsk (Norwegian)"
@@ -340,7 +340,7 @@
 "[english]Time"	"10:08"
 "Time_Suffix"	"PM"
 "[english]Time_Suffix"	"PM"
-"Now_Playing"	"Redare în curs"
+"Now_Playing"	"REDARE ÎN CURS"
 "[english]Now_Playing"	"NOW PLAYING"
 "Now_Quitting"	"ACUM SE IESE"
 "[english]Now_Quitting"	"NOW EXITING"
@@ -372,7 +372,7 @@
 "[english]DashboardClose_Header"	"CLOSE"
 "Battery_Status"	"CONTROLLERE"
 "[english]Battery_Status"	"CONTROLLERS"
-"Volume_Status"	"Volum"
+"Volume_Status"	"VOLUM"
 "[english]Volume_Status"	"VOLUME"
 "Gamepad_Tip"	"Navighează pe Dashboard"
 "[english]Gamepad_Tip"	"Navigate Dashboard"
@@ -382,7 +382,7 @@
 "[english]Battery2_Status"	"Battery2"
 "VR_Status"	"STARE VR"
 "[english]VR_Status"	"VR STATUS"
-"VR_Notification_Title_Dashboard"	"Accesează Dashboard-ul"
+"VR_Notification_Title_Dashboard"	"Accesează Dashboardul"
 "[english]VR_Notification_Title_Dashboard"	"Access the Dashboard"
 "VR_Notification_Content_Dashboard"	"Apasă Butonul de Sistem pentru a începe"
 "[english]VR_Notification_Content_Dashboard"	"Press the System Button to begin"
@@ -452,7 +452,7 @@
 "[english]DashboardPower_Header"	"SYSTEM"
 "UI_Paste_UnknownSource"	"[Inserează]"
 "[english]UI_Paste_UnknownSource"	"[Paste]"
-"UI_Paste_CDKey"	"[Inserează cheia de activare]"
+"UI_Paste_CDKey"	"[Lipește codul de activare]"
 "[english]UI_Paste_CDKey"	"[Paste CD Key]"
 "UI_Paste_URL"	"[Inserează URL]"
 "[english]UI_Paste_URL"	"[Paste URL]"
@@ -480,7 +480,7 @@
 "[english]BoundsColor"	"Bounds Color"
 "BoundsOpacity"	"Opacitatea granițelor"
 "[english]BoundsOpacity"	"Bounds opacity"
-"FloorBoundsAlwaysOn"	"Granițele podelei activate permanent"
+"FloorBoundsAlwaysOn"	"Granițele podelei să fie activate permanent"
 "[english]FloorBoundsAlwaysOn"	"Floor bounds always on"
 "CollisionBoundsReset"	"Resetează la implicite"
 "[english]CollisionBoundsReset"	"Reset to Default"
@@ -605,10 +605,40 @@ Găsește mai multe înfățișări"
 "[english]VRSettingsMimeTypes_HomeApp"	"Home App: "
 "BackgroundImageSettings"	"Setări"
 "[english]BackgroundImageSettings"	"Settings"
+"BackgroundImageReload_DomeProjection"	"Utilizează proiecția domului"
+"[english]BackgroundImageReload_DomeProjection"	"Use Dome Projection"
+"BackgroundImageReload_DomeRadius"	"Raza domului"
+"[english]BackgroundImageReload_DomeRadius"	"Dome Radius"
+"BackgroundImageReload_CameraHeight"	"Înălțimea camerei"
+"[english]BackgroundImageReload_CameraHeight"	"Camera Height"
+"NightModeCheck"	"Modul nocturn"
+"[english]NightModeCheck"	"Night Mode"
+"NightModeDesc"	"Modul nocturm va diminua lumina din headset până la 5:00 AM (sau până când SteamVR este repornit)."
+"[english]NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Transition_Progress_Description"	"SE AȘTEAPTĂ..."
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"SE AȘTEAPTĂ"
 "[english]Now_Waiting"	"WAITING..."
+"HomeAppCheck"	"Medii SteamVR îmbunătățite"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Noile medii pentru SteamVR aduc spații mai bogate pentru acasă, funcții sociale și multe altele. Participă pentru a testa și a oferi reacții pe forumurile SteamVR."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Amuțit"
 "[english]MutedLabel"	"Muted"
+"BackToApp"	"ÎNAPOI LA APLICAȚIE"
+"[english]BackToApp"	"BACK TO APP"
+"Customization_Disclaimer"	"Dacă mediile SteamVR îmbunătățite sunt activate, folosește meniul din aplicație pentru a-ți personaliza spațiul de acasă."
+"[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Modul senzorilor capacitivi"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Urmărirea degetelor (implicită)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Urmărirea degetelor este dezactivată"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Senzorii capacitivi controlează triggerul"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Senzorii capacitivi controlează gripul"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
