--- a/content/panorama/localization/tenfoot_schinese.txt
+++ b/content/panorama/localization/tenfoot_schinese.txt
@@ -112,33 +112,33 @@
 "[english]UI_TextEntry_PasteClipboard"	"Paste"
 "UI_Agreements"	"协议"
 "[english]UI_Agreements"	"Agreements"
-"UI_ViewAgreements"	"查看《Steam 用户协议》和《隐私政策》"
+"UI_ViewAgreements"	"查看《Steam 订户协议》和《隐私政策》"
 "[english]UI_ViewAgreements"	"VIEW SSA & PRIVACY POLICY"
 "UI_I_Agree"	"我同意"
 "[english]UI_I_Agree"	"I agree"
-"Month_January"	"一月"
+"Month_January"	"1月"
 "[english]Month_January"	"January"
-"Month_February"	"二月"
+"Month_February"	"2月"
 "[english]Month_February"	"February"
-"Month_March"	"三月"
+"Month_March"	"3月"
 "[english]Month_March"	"March"
-"Month_April"	"四月"
+"Month_April"	"4月"
 "[english]Month_April"	"April"
-"Month_May"	"五月"
+"Month_May"	"5月"
 "[english]Month_May"	"May"
-"Month_June"	"六月"
+"Month_June"	"6月"
 "[english]Month_June"	"June"
-"Month_July"	"七月"
+"Month_July"	"7月"
 "[english]Month_July"	"July"
-"Month_August"	"八月"
+"Month_August"	"8月"
 "[english]Month_August"	"August"
-"Month_September"	"九月"
+"Month_September"	"9月"
 "[english]Month_September"	"September"
-"Month_October"	"十月"
+"Month_October"	"10月"
 "[english]Month_October"	"October"
-"Month_November"	"十一月"
+"Month_November"	"11月"
 "[english]Month_November"	"November"
-"Month_December"	"十二月"
+"Month_December"	"12月"
 "[english]Month_December"	"December"
 "UI_Continue"	"继续"
 "[english]UI_Continue"	"Continue"
@@ -594,7 +594,7 @@
 "[english]SettingsTime_30m"	"after 30 minutes of idle time"
 "SettingsTime_1h"	"空闲 1 小时后"
 "[english]SettingsTime_1h"	"after 1 hour of idle time"
-"Now_Playing_HomeApp"	"主页应用内"
+"Now_Playing_HomeApp"	"家"
 "[english]Now_Playing_HomeApp"	"HOME"
 "Now_Starting_HomeApp"	"前往主页至"
 "[english]Now_Starting_HomeApp"	"GOING HOME TO"
@@ -616,7 +616,7 @@
 "[english]NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Transition_Progress_Description"	"正在等待…"
 "[english]Transition_Progress_Description"	"WAITING FOR..."
-"Now_Waiting"	"正在等待"
+"Now_Waiting"	"正在等待…"
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"增强型 SteamVR 环境"
 "[english]HomeAppCheck"	"Enhanced SteamVR Environments"
@@ -632,4 +632,14 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"如果启用了增强型 SteamVR 环境，使用应用内置菜单来自定义您的主控室空间。"
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnuckles_CapsenseMode"	"电容式感应模式"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"手指跟踪（默认）"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"禁用手指跟踪"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"电容式感应控制扳机键"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"电容式感应控制握持键"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
