--- a/content/panorama/localization/tenfoot_tchinese.txt
+++ b/content/panorama/localization/tenfoot_tchinese.txt
@@ -112,33 +112,33 @@
 "[english]UI_TextEntry_PasteClipboard"	"Paste"
 "UI_Agreements"	"協議"
 "[english]UI_Agreements"	"Agreements"
-"UI_ViewAgreements"	"檢視 Steam 用戶合約和隱私權條款"
+"UI_ViewAgreements"	"檢視 Steam 訂戶協議和隱私權條款"
 "[english]UI_ViewAgreements"	"VIEW SSA & PRIVACY POLICY"
 "UI_I_Agree"	"我同意"
 "[english]UI_I_Agree"	"I agree"
-"Month_January"	"一月"
+"Month_January"	"1月"
 "[english]Month_January"	"January"
-"Month_February"	"二月"
+"Month_February"	"2月"
 "[english]Month_February"	"February"
-"Month_March"	"三月"
+"Month_March"	"3月"
 "[english]Month_March"	"March"
-"Month_April"	"四月"
+"Month_April"	"4月"
 "[english]Month_April"	"April"
-"Month_May"	"五月"
+"Month_May"	"5月"
 "[english]Month_May"	"May"
-"Month_June"	"六月"
+"Month_June"	"6月"
 "[english]Month_June"	"June"
-"Month_July"	"七月"
+"Month_July"	"7月"
 "[english]Month_July"	"July"
-"Month_August"	"八月"
+"Month_August"	"8月"
 "[english]Month_August"	"August"
-"Month_September"	"九月"
+"Month_September"	"9月"
 "[english]Month_September"	"September"
-"Month_October"	"十月"
+"Month_October"	"10月"
 "[english]Month_October"	"October"
-"Month_November"	"十一月"
+"Month_November"	"11月"
 "[english]Month_November"	"November"
-"Month_December"	"十二月"
+"Month_December"	"12月"
 "[english]Month_December"	"December"
 "UI_Continue"	"繼續"
 "[english]UI_Continue"	"Continue"
@@ -632,4 +632,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"如果啟用了增強型 SteamVR 環境，使用應用內建選單來自訂您的主控室空間。"
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"電容感應模式"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"手指定位（預設）"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"停用手指定位"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"以電容感應控制板機"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"以電容感應控制握持"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
