--- a/content/vrmonitor/translations/vrmonitor_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_danish.txt
@@ -1387,7 +1387,7 @@
 "[english]DismissableWarning_WindowsAeroDisabled"	"Windows Aero disabled (0x4000)"
 "Settings_UseBluetoothLink_Text"	"Slå Bluetooth-kommunikation til"
 "[english]Settings_UseBluetoothLink_Text"	"Enable Bluetooth communication"
-"Settings_UseBluetoothLink_Info"	"Når dette er slået til kan basisstationerne trådløst strømstyres og opdateres, og du kan modtage meddelelser via din telefon."
+"Settings_UseBluetoothLink_Info"	"Når dette er slået til kan basisstationerne trådløst strømstyres og opdateres,\nog du kan modtage meddelelser via din telefon."
 "[english]Settings_UseBluetoothLink_Info"	"When this is enabled, base stations can be wirelessly power managed and updated, and you can get alerts from your phone."
 "FirmwareWizard_WaitingForShutdown_TextContent"	"Forbereder system på firmware-opdatering..."
 "[english]FirmwareWizard_WaitingForShutdown_TextContent"	"Preparing system for firmware update..."
@@ -1395,7 +1395,7 @@
 "[english]VRState_Standby"	"Standby"
 "Settings_Audio_AudioMirrorUnsupported"	"Lydafspejling er ikke understøttet på denne platform"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
-"Settings_AllowReprojection"	"Tillad indskudt omprojicering"
+"Settings_AllowReprojection"	"Tillad indskudt genprojicering"
 "[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
 "DismissableWarning_Detected"	"Registreret"
 "[english]DismissableWarning_Detected"	"Detected"
@@ -1429,7 +1429,7 @@
 "[english]MenuAction_KnockKnock"	"Knock Knock"
 "Settings_NotificationKnockKnock_Text"	"Banke på"
 "[english]Settings_NotificationKnockKnock_Text"	"Knock Knock"
-"Settings_NotificationKnockKnock_Info"	"Dette tillader folk uden for VR at få opmærksomheden hos brugeren af headsettet."
+"Settings_NotificationKnockKnock_Info"	"Lader folk uden for VR få opmærksomheden hos brugeren af headsettet."
 "[english]Settings_NotificationKnockKnock_Info"	"This allows people outside of VR to get the headset user's attention."
 "KnockKnock_Text"	"Jeg er i VR lige nu. Hvis du gerne vil have min opmærksomhed, bedes du trykke på knappen nedenfor eller trykke på tasten \"%1\"."
 "[english]KnockKnock_Text"	"I am in VR right now. If you would like to get my attention please press the button below or press the '%1' key."
@@ -1555,9 +1555,9 @@
 "[english]DismissableWarning_DisplayInExtendedMode"	"Display in Extended Mode (0x10000)"
 "Settings_Advanced_DirectMode_Header"	"Direkte tilstand"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
-"Settings_ForceReprojection"	"Slå altid-på genprojektion til."
+"Settings_ForceReprojection"	"Slå konstant genprojicering til."
 "[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
-"Settings_ForceReprojection_Info"	"Denne indstilling er kun passende for ikke-aktive spil, da den sænker positions-forudsigelser, for at give mere arbejdstid til langsommere applikationer."
+"Settings_ForceReprojection_Info"	"Denne indstilling er kun egnet til ikke-aktive spil, da den sænker øget positions-\nforudsigelse, for at give mere arbejdstid til langsommere applikationer."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Vis advarsel om mistede billeder"
 "[english]Settings_CheckForMissedFramesWarning"	"Show missed frame warning"
@@ -1635,7 +1635,7 @@
 "[english]PlaylistEditor_Detail_Total_Label"	"Total:"
 "PlaylistEditor_Detail_WaitForNext_Checkbox"	"Vent på næste"
 "[english]PlaylistEditor_Detail_WaitForNext_Checkbox"	"Wait for Next"
-"PlaylistEditor_Detail_PrerollPlacecard_Label"	"Vis placeringskort først:"
+"PlaylistEditor_Detail_PrerollPlacecard_Label"	"Preroll-placeringskort:"
 "[english]PlaylistEditor_Detail_PrerollPlacecard_Label"	"Preroll Placecard:"
 "PlaylistEditor_Detail_NothingSet_Text"	"Intet angivet."
 "[english]PlaylistEditor_Detail_NothingSet_Text"	"Nothing set."
@@ -1699,7 +1699,7 @@
 "[english]PlaylistEditor_SelectExecutable_FileSelector"	"Select Executable Path"
 "PlaylistEditor_SelectWorkingDirectory_FileSelector"	"Vælg arbejdsmappe"
 "[english]PlaylistEditor_SelectWorkingDirectory_FileSelector"	"Select Working Directory"
-"PlaylistEditor_SelectPrerollPlacecard_FileSelector"	"Vælg placeringskort"
+"PlaylistEditor_SelectPrerollPlacecard_FileSelector"	"Vælg preroll-placeringskort"
 "[english]PlaylistEditor_SelectPrerollPlacecard_FileSelector"	"Select Preroll Placecard"
 "PlaylistEditor_SelectImageForPlacecard_FileSelector"	"Vælg billede til placeringskort"
 "[english]PlaylistEditor_SelectImageForPlacecard_FileSelector"	"Select Image for Placecard"
@@ -1791,11 +1791,11 @@
 "[english]Settings_EnableDashboard"	"Enable VR Dashboard"
 "Settings_ArcadeMode"	"Slå arkadetilstand til"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
-"Settings_AllowAsyncReprojection"	"Tillad asynkron genprojektering"
+"Settings_AllowAsyncReprojection"	"Tillad asynkron genprojicering"
 "[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
-"Advanced_AsyncActive"	"Asynk genprojektering til"
+"Advanced_AsyncActive"	"Asynk. genprojicering til"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
-"Advanced_AsyncNotActive"	"Asynk genprojektering fra"
+"Advanced_AsyncNotActive"	"Asynk. genprojicering fra"
 "[english]Advanced_AsyncNotActive"	"Async Reprojection Off"
 "Lighthouse_BasestationInternalFault_01_Header"	"Basisstation uanvendelig"
 "[english]Lighthouse_BasestationInternalFault_01_Header"	"Base station unusable"
@@ -1881,6 +1881,8 @@
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
 "MenuAction_Workshop_RunTools"	"Skab/rediger et miljø"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
+"Settings_EnableLinuxGPUProfiling"	"Slå GPU-profilering til"
+"[english]Settings_EnableLinuxGPUProfiling"	"Enable GPU profiling"
 "Settings_Advanced_AllowSupersampleFiltering"	"Slå avanceret supersamplingsfiltrering til"
 "[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable Advanced Supersample Filtering"
 "Explanation_SupersamplingFiltering"	"Indstillinger for supersamplingsfiltrering:"
@@ -1939,7 +1941,7 @@
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"SteamVR Home beta"
 "[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
-"Settings_HomeAppDesc"	"Den nye SteamVR Home oplevelse understøtter flere rum i hjemmet, sociale funktioner og mere. Denne funktion er i øjeblikket i en beta version, og vi beder dig give tilbagemeldinger på vores fora."
+"Settings_HomeAppDesc"	"Den nye SteamVR Home-oplevelse understøtter mere detaljerede hjemsteder, sociale funktioner og mere. Denne funktion er i øjeblikket i en beta-version, og vi beder dig give feedback på vores fora."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Nattetilstand"
 "[english]Settings_NightModeCheck"	"Night Mode"
