--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -1780,7 +1780,7 @@
 "[english]Lighthouse_BasestationInternalFault_05_Header"	"Base station unusable"
 "Lighthouse_BasestationInternalFault_05_Action"	"htcvive.com/support bezoeken"
 "[english]Lighthouse_BasestationInternalFault_05_Action"	"Visit htcvive.com/support"
-"Settings_StatusWindowMinimizeToTray_Text"	"SteamVR statusscherm bij opstarten minimaliseren naar taakbalk"
+"Settings_StatusWindowMinimizeToTray_Text"	"SteamVR-statusscherm minimaliseert naar systeemvak"
 "[english]Settings_StatusWindowMinimizeToTray_Text"	"When minimized, SteamVR Status minimizes to the system tray"
 "ShutdownWhileAppRunning_Title"	"SteamVR afsluiten"
 "[english]ShutdownWhileAppRunning_Title"	"SteamVR Shutdown"
@@ -1790,11 +1790,15 @@
 "[english]RebootWhileAppRunning_Title"	"SteamVR Reboot"
 "RebootWhileAppRunning_Format"	"Het herstarten van SteamVR zal ook '%1' afsluiten. Wil je doorgaan?"
 "[english]RebootWhileAppRunning_Format"	"Rebooting SteamVR will also shut down'%1'. Do you wish to reboot?"
+"FirmwareWizard_UpdateGenericTracker_Fail_Title"	"Firmware-update mislukt"
+"[english]FirmwareWizard_UpdateGenericTracker_Fail_Title"	"Firmware Update Failed"
+"FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"Firmware-update mislukt."
+"[english]FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"Firmware update failed."
 "FirmwareWizard_UpdateGenericTracker_Success_UpperText"	"Gelukt!"
 "[english]FirmwareWizard_UpdateGenericTracker_Success_UpperText"	"Success!"
 "MenuAction_Workshop_RunTools"	"Een omgeving maken/aanpassen"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
-"MenuAction_Workshop_ViewWiki"	"SteamVR-omgevingen Wiki"
+"MenuAction_Workshop_ViewWiki"	"Wiki SteamVR-omgevingen"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
 "MenuAction_ReportABug"	"Een bug melden"
 "[english]MenuAction_ReportABug"	"Report A Bug"
@@ -1804,6 +1808,8 @@
 "[english]BugReporter_Title"	"Report A Bug"
 "BugReporter_Subject"	"Onderwerp:"
 "[english]BugReporter_Subject"	"Subject:"
+"BugReporter_CharactersRemaining"	"%1 tekens resterend"
+"[english]BugReporter_CharactersRemaining"	"%1 Characters Remaining"
 "BugReporter_Description"	"Beschrijving:"
 "[english]BugReporter_Description"	"Description:"
 "BugReporter_ReportType"	"Soort verslag:"
@@ -1818,6 +1824,8 @@
 "[english]BugReporter_PreviewReport"	"Preview Report"
 "BugReporter_IncludeCrashDumps"	"Crashdumps insluiten"
 "[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
+"BugReporter_SubjectRequired"	"Geef een onderwerp op."
+"[english]BugReporter_SubjectRequired"	"Please supply a subject."
 "BugReporter_ProgressSubmitting"	"Verzenden..."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
 "BugReporter_ProgressSubmittingPercent"	"Verzenden... %1%"
