--- a/content/vrmonitor/translations/vrmonitor_errors_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_danish.txt
@@ -825,12 +825,20 @@
 "[english]Popover_LowBattery_Tracker_Header"	"Tracker ready with low battery"
 "Popover_LowBattery_Tracker_Description"	"Denne sporer er tilsluttet og sporer, men batteriet er lavt."
 "[english]Popover_LowBattery_Tracker_Description"	"This tracker is connected and tracking but the battery is low."
+"VRInitError_Compositor_FirmwareRequiresUpdate_Header"	"Compositor afviste initialisering"
+"[english]VRInitError_Compositor_FirmwareRequiresUpdate_Header"	"Compositor Rejected Initialization"
+"VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Dit headset er fundet, men kræver en obligatorisk firmware-opdatering for at sikre korrekt drift."
+"[english]VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Your headset is detected, but requires a mandatory firmware update to ensure correct operation."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Opdater firmware"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Update Firmware"
 "Popover_LowBattery_HMD_Header"	"HMD klar med lavt batteri"
 "[english]Popover_LowBattery_HMD_Header"	"HMD ready with low battery"
 "Popover_LowBattery_HMD_Description"	"Dette HMD er tilsluttet og sporer, men batteriet er lavt."
 "[english]Popover_LowBattery_HMD_Description"	"This HMD is connected and tracking but the battery is low."
+"VRInitError_Compositor_UnableToCreateDevice_Header"	"Compositor kan ikke oprette enhed"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Header"	"Compositor Unable to Create Device"
+"VRInitError_Compositor_UnableToCreateDevice_Description"	"Compositoren var ikke i stand til at oprette en grafisk enhed som en del af dens initialisering."
+"[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
 "VRInitError_Compositor_UnableToCreateDevice_Action"	"Fejlfinding"
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
 "Lighthouse_BasestationInternalFault_06_Header"	"Basisstation uanvendelig"
@@ -857,5 +865,11 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"Genstart"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows Udviklertilstand påkrævet"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows Developer Mode Required"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"Windows skal være i udviklertilstand for at bruge Windows MR-brodriveren."
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"Windows needs to be in developer mode to use the Windows MR bridge driver."
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Sæt Windows til udviklertilstand"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Set Windows to Developer Mode"
 }
 }
