--- a/content/vrmonitor/translations/vrmonitor_errors_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_greek.txt
@@ -67,7 +67,7 @@
 "[english]VRInitError_Unknown_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Unknown_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε μεταβείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Unknown_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Unknown_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Unknown_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Unknown_Action"	"Check SteamVR Support"
 "VRInitError_Init_InstallationNotFound_Header"	"Λείπουν αρχεία"
 "[english]VRInitError_Init_InstallationNotFound_Header"	"Missing files"
@@ -109,7 +109,7 @@
 "[english]VRInitError_Init_InvalidInterface_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_InvalidInterface_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε αναφερθείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_InvalidInterface_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_InvalidInterface_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_InvalidInterface_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_InvalidInterface_Action"	"Check SteamVR Support"
 "VRInitError_Init_UserConfigDirectoryInvalid_Header"	"Κάτι είναι λάθος"
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Header"	"Something is wrong"
@@ -127,7 +127,7 @@
 "[english]VRInitError_Init_NotInitialized_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_NotInitialized_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε αναφερθείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_NotInitialized_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotInitialized_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_NotInitialized_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_NotInitialized_Action"	"Check SteamVR Support"
 "VRInitError_Init_PathRegistryNotFound_Header"	"Λείπουν αρχεία"
 "[english]VRInitError_Init_PathRegistryNotFound_Header"	"Missing files"
@@ -157,55 +157,55 @@
 "[english]VRInitError_Init_AppInfoInitFailed_Header"	"Something is wrong"
 "VRInitError_Init_AppInfoInitFailed_Description"	"Ένα εσωτερικό εξάρτημα του SteamVR δε λειτουργεί σωστά. Παρακαλούμε αναφερθείτε την Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_AppInfoInitFailed_Description"	"An internal component of SteamVR isn't working properly. Please check SteamVR Support for help."
-"VRInitError_Init_AppInfoInitFailed_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_AppInfoInitFailed_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_AppInfoInitFailed_Action"	"Check SteamVR Support"
 "VRInitError_Init_Retry_Header"	"Αυτό δεν θα έπρεπε να έχει συμβεί."
 "[english]VRInitError_Init_Retry_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_Retry_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε αναφερθείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_Retry_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_Retry_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_Retry_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_Retry_Action"	"Check SteamVR Support"
 "VRInitError_Init_InitCanceledByUser_Header"	"Αυτό δεν θα έπρεπε να έχει συμβεί."
 "[english]VRInitError_Init_InitCanceledByUser_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_InitCanceledByUser_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε αναφερθείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_InitCanceledByUser_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_InitCanceledByUser_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_InitCanceledByUser_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_InitCanceledByUser_Action"	"Check SteamVR Support"
 "VRInitError_Init_AnotherAppLaunching_Header"	"Αυτό δεν θα έπρεπε να έχει συμβεί."
 "[english]VRInitError_Init_AnotherAppLaunching_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_AnotherAppLaunching_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε μεταβείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_AnotherAppLaunching_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_AnotherAppLaunching_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_AnotherAppLaunching_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_AnotherAppLaunching_Action"	"Check SteamVR Support"
 "VRInitError_Init_SettingsInitFailed_Header"	"Αυτό δεν θα έπρεπε να έχει συμβεί."
 "[english]VRInitError_Init_SettingsInitFailed_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_SettingsInitFailed_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε μεταβείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_SettingsInitFailed_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_SettingsInitFailed_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_SettingsInitFailed_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_SettingsInitFailed_Action"	"Check SteamVR Support"
 "VRInitError_Init_ShuttingDown_Header"	"Αυτό δεν θα έπρεπε να έχει συμβεί."
 "[english]VRInitError_Init_ShuttingDown_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_ShuttingDown_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε μεταβείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_ShuttingDown_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_ShuttingDown_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_ShuttingDown_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_ShuttingDown_Action"	"Check SteamVR Support"
 "VRInitError_Init_TooManyObjects_Header"	"Αυτό δεν θα έπρεπε να έχει συμβεί."
 "[english]VRInitError_Init_TooManyObjects_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_TooManyObjects_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε μεταβείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_TooManyObjects_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_TooManyObjects_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_TooManyObjects_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_TooManyObjects_Action"	"Check SteamVR Support"
 "VRInitError_Init_NoServerForBackgroundApp_Header"	"Αυτό δεν θα έπρεπε να έχει συμβεί."
 "[english]VRInitError_Init_NoServerForBackgroundApp_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_NoServerForBackgroundApp_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε αναφερθείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_NoServerForBackgroundApp_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NoServerForBackgroundApp_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_NoServerForBackgroundApp_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_NoServerForBackgroundApp_Action"	"Check SteamVR Support"
 "VRInitError_Init_NotSupportedWithCompositor_Header"	"Αυτό δεν θα έπρεπε να έχει συμβεί."
 "[english]VRInitError_Init_NotSupportedWithCompositor_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_NotSupportedWithCompositor_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε αναφερθείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_NotSupportedWithCompositor_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotSupportedWithCompositor_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_NotSupportedWithCompositor_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_NotSupportedWithCompositor_Action"	"Check SteamVR Support"
 "VRInitError_Driver_Failed_Header"	"Κάτι είναι λάθος"
 "[english]VRInitError_Driver_Failed_Header"	"Something is wrong"
@@ -295,7 +295,7 @@
 "[english]VRInitError_IPC_Failed_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_IPC_Failed_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε αναφερθείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_IPC_Failed_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_IPC_Failed_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_IPC_Failed_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_IPC_Failed_Action"	"Check SteamVR Support"
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"Αδυναμία σύνδεσης στο Oculus runtime"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"Unable to connect to Oculus runtime"
@@ -445,7 +445,7 @@
 "[english]Lighthouse_UnknownEvent_Header"	"Lighthouse error"
 "Lighthouse_UnknownEvent_Description"	"Κάτι δεν πάει καλά με το σύστημα Lighthouse σας. Παρακαλούμε αναφερθείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]Lighthouse_UnknownEvent_Description"	"Something is wrong with your Lighthouse system. Please check SteamVR Support for help."
-"Lighthouse_UnknownEvent_Action"	"Δημιουργία αναφοράς συστήματος"
+"Lighthouse_UnknownEvent_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]Lighthouse_UnknownEvent_Action"	"Check SteamVR Support"
 "Lighthouse_BasestationFactoryError_Header"	"Σταθμός βάσης ακατάλληλος για χρήση"
 "[english]Lighthouse_BasestationFactoryError_Header"	"Base station unusable"
@@ -589,7 +589,7 @@
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Init_NotAvailableToUtilityApps_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε μεταβείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotAvailableToUtilityApps_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Init_NotAvailableToUtilityApps_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Action"	"Check SteamVR Support"
 "Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Προειδοποιήσεις για πρώτη φορά"
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Warnings for the first time"
@@ -669,7 +669,7 @@
 "[english]VRInitError_Internal_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_Internal_Description"	"Υπήρξε ένα απρόσμενο πρόβλημα. Παρακαλούμε μεταβείτε στην Υποστήριξη SteamVR για βοήθεια."
 "[english]VRInitError_Internal_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Internal_Action"	"Δημιουργία αναφοράς συστήματος"
+"VRInitError_Internal_Action"	"Έλεγχος υποστήριξης SteamVR"
 "[english]VRInitError_Internal_Action"	"Check SteamVR Support"
 "Warning_DismissableWarning_SomeDisplaysAreMirroring_Header"	"ΠΡΟΒΟΛΕΣ ΣΕ ΑΝΑΠΑΡΑΓΩΓΗ"
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Header"	"Mirroring Displays"
@@ -831,6 +831,28 @@
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Your headset is detected, but requires a mandatory firmware update to ensure correct operation."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Ενημέρωση υλικολογισμικού"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Update Firmware"
+"Popover_LowBattery_HMD_Header"	"Headset έτοιμο με χαμηλή μπαταρία"
+"[english]Popover_LowBattery_HMD_Header"	"HMD ready with low battery"
+"Popover_LowBattery_HMD_Description"	"Αυτό το headset είναι συνδεδεμένο και ανιχνεύει αλλά η μπαταρία είναι χαμηλή."
+"[english]Popover_LowBattery_HMD_Description"	"This HMD is connected and tracking but the battery is low."
+"VRInitError_Compositor_UnableToCreateDevice_Header"	"Αδυναμία δημιουργίας συσκευής από τον στοιχειοθέτη"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Header"	"Compositor Unable to Create Device"
+"VRInitError_Compositor_UnableToCreateDevice_Description"	"Δεν ήταν δυνατή η δημιουργία συσκευής γραφικών από τον στοιχειοθέτη κατά την αρχικοποίησή του."
+"[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
+"VRInitError_Compositor_UnableToCreateDevice_Action"	"Aντιμετώπιση προβλημάτων"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
+"Lighthouse_BasestationInternalFault_06_Header"	"Σταθμός βάσης ακατάλληλος για χρήση"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"Ένας σταθμός βάσης έχει παρουσιάσει ένα εσωτερικό πρόβλημα (σφάλμα 06). Παρακαλούμε επανεκκινήστε τον σταθμό βάσης με το κόκκινο φως που αναβοσβήνει. Εάν το πρόβλημα παραμένει, επικοινωνήστε με τον κατασκευαστή για βοήθεια."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"Επισκεφθείτε το htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"Σταθμός βάσης ακατάλληλος για χρήση"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"Ένας σταθμός βάσης έχει παρουσιάσει ένα εσωτερικό πρόβλημα (σφάλμα 07). Παρακαλούμε επανεκκινήστε τον σταθμό βάσης με το κόκκινο φως που αναβοσβήνει. Εάν το πρόβλημα παραμένει, επικοινωνήστε με τον κατασκευαστή για βοήθεια."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"Επισκεφθείτε το htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
 "Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Διαθέσιμος οδηγός Knuckles"
 "[english]Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Driver Available"
 "Warning_DismissableWarning_NeedKnucklesDriver_Description"	"Χρησιμοποιείτε χειριστήρια Knuckles, αλλά δεν έχετε τον οδηγό Knuckles εγκατεστημένο."
@@ -843,5 +865,7 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"Επανεκκίνηση"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Απαιτείται η λειτουργία Developer στα Windows"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows Developer Mode Required"
 }
 }
