--- a/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
@@ -65,9 +65,9 @@
 "[english]Error_TrackingDevice_NoPose_Action"	"Troubleshooting"
 "VRInitError_Unknown_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Unknown_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Unknown_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Unknown_Description"	"予期しない問題が発生しました。問題の解決には、SteamVR サポートをご利用ください。"
 "[english]VRInitError_Unknown_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Unknown_Action"	"SteamVR サポートをチェック"
+"VRInitError_Unknown_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Unknown_Action"	"Check SteamVR Support"
 "VRInitError_Init_InstallationNotFound_Header"	"ファイルが見つかりません"
 "[english]VRInitError_Init_InstallationNotFound_Header"	"Missing files"
@@ -107,9 +107,9 @@
 "[english]VRInitError_Init_InterfaceNotFound_Action"	""
 "VRInitError_Init_InvalidInterface_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_InvalidInterface_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_InvalidInterface_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_InvalidInterface_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_InvalidInterface_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_InvalidInterface_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_InvalidInterface_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_InvalidInterface_Action"	"Check SteamVR Support"
 "VRInitError_Init_UserConfigDirectoryInvalid_Header"	"問題が発生しました"
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Header"	"Something is wrong"
@@ -125,9 +125,9 @@
 "[english]VRInitError_Init_HmdNotFound_Action"	"Troubleshooting"
 "VRInitError_Init_NotInitialized_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_NotInitialized_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotInitialized_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_NotInitialized_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_NotInitialized_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotInitialized_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_NotInitialized_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_NotInitialized_Action"	"Check SteamVR Support"
 "VRInitError_Init_PathRegistryNotFound_Header"	"ファイルが見つかりません"
 "[english]VRInitError_Init_PathRegistryNotFound_Header"	"Missing files"
@@ -155,57 +155,57 @@
 "[english]VRInitError_Init_PathRegistryNotWritable_Action"	"Troubleshooting"
 "VRInitError_Init_AppInfoInitFailed_Header"	"問題が発生しました"
 "[english]VRInitError_Init_AppInfoInitFailed_Header"	"Something is wrong"
-"VRInitError_Init_AppInfoInitFailed_Description"	"SteamVR の内部コンポーネントが正しく動作していません。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_AppInfoInitFailed_Description"	"SteamVR の内部コンポーネントが正しく動作していません。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_AppInfoInitFailed_Description"	"An internal component of SteamVR isn't working properly. Please check SteamVR Support for help."
-"VRInitError_Init_AppInfoInitFailed_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_AppInfoInitFailed_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_AppInfoInitFailed_Action"	"Check SteamVR Support"
 "VRInitError_Init_Retry_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_Retry_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_Retry_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_Retry_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_Retry_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_Retry_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_Retry_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_Retry_Action"	"Check SteamVR Support"
 "VRInitError_Init_InitCanceledByUser_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_InitCanceledByUser_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_InitCanceledByUser_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_InitCanceledByUser_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_InitCanceledByUser_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_InitCanceledByUser_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_InitCanceledByUser_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_InitCanceledByUser_Action"	"Check SteamVR Support"
 "VRInitError_Init_AnotherAppLaunching_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_AnotherAppLaunching_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_AnotherAppLaunching_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_AnotherAppLaunching_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_AnotherAppLaunching_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_AnotherAppLaunching_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_AnotherAppLaunching_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_AnotherAppLaunching_Action"	"Check SteamVR Support"
 "VRInitError_Init_SettingsInitFailed_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_SettingsInitFailed_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_SettingsInitFailed_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_SettingsInitFailed_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_SettingsInitFailed_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_SettingsInitFailed_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_SettingsInitFailed_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_SettingsInitFailed_Action"	"Check SteamVR Support"
 "VRInitError_Init_ShuttingDown_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_ShuttingDown_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_ShuttingDown_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_ShuttingDown_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_ShuttingDown_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_ShuttingDown_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_ShuttingDown_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_ShuttingDown_Action"	"Check SteamVR Support"
 "VRInitError_Init_TooManyObjects_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_TooManyObjects_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_TooManyObjects_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_TooManyObjects_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_TooManyObjects_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_TooManyObjects_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_TooManyObjects_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_TooManyObjects_Action"	"Check SteamVR Support"
 "VRInitError_Init_NoServerForBackgroundApp_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_NoServerForBackgroundApp_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NoServerForBackgroundApp_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_NoServerForBackgroundApp_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_NoServerForBackgroundApp_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NoServerForBackgroundApp_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_NoServerForBackgroundApp_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_NoServerForBackgroundApp_Action"	"Check SteamVR Support"
 "VRInitError_Init_NotSupportedWithCompositor_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_NotSupportedWithCompositor_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotSupportedWithCompositor_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_NotSupportedWithCompositor_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_NotSupportedWithCompositor_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotSupportedWithCompositor_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_NotSupportedWithCompositor_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_NotSupportedWithCompositor_Action"	"Check SteamVR Support"
 "VRInitError_Driver_Failed_Header"	"問題が発生しました"
 "[english]VRInitError_Driver_Failed_Header"	"Something is wrong"
@@ -295,7 +295,7 @@
 "[english]VRInitError_IPC_Failed_Header"	"Hmm, that shouldn't have happened."
 "VRInitError_IPC_Failed_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
 "[english]VRInitError_IPC_Failed_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_IPC_Failed_Action"	"SteamVR サポートをチェック"
+"VRInitError_IPC_Failed_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_IPC_Failed_Action"	"Check SteamVR Support"
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"Oculus ランタイムに接続できません"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"Unable to connect to Oculus runtime"
@@ -667,9 +667,9 @@
 "[english]Popover_BaseStationNoPowerManagement_Description"	"This base station can not participate in the power management."
 "VRInitError_Internal_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Internal_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Internal_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Internal_Description"	"予期しない問題が発生しました。問題の解決には SteamVR サポートをご利用ください。"
 "[english]VRInitError_Internal_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Internal_Action"	"SteamVR サポートをチェック"
+"VRInitError_Internal_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Internal_Action"	"Check SteamVR Support"
 "Warning_DismissableWarning_SomeDisplaysAreMirroring_Header"	"ミラーリングされたディスプレイ"
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Header"	"Mirroring Displays"
@@ -865,5 +865,9 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"再起動"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows 開発者モードが必須"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows Developer Mode Required"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Windows を開発者モードに設定する"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Set Windows to Developer Mode"
 }
 }
