--- a/content/vrmonitor/translations/vrmonitor_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_greek.txt
@@ -1883,11 +1883,75 @@
 "[english]Settings_Advanced_Supersampling_Header"	"Supersampling"
 "Settings_Advanced_Supersampling_RequiresRestart"	"Αυτή η αλλαγή απαιτεί επανεκκίνηση του SteamVR για να τεθεί σε ισχύ."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
-"Explanation_Supersampling"	"Η υπερδειγματοληψία θα προκαλέσει όλες τις εφαρμογές VR να εμφανίζονται σε υψηλότερη (ή χαμηλότερη) ανάλυση από τη φυσική ανάλυση του προσαρμοσμένου headset.\n(Η προεπιλογή είναι 1.0)"
+"Explanation_Supersampling"	"Η υπερδειγματοληψία θα προκαλέσει όλες τις εφαρμογές VR να εμφανίζονται σε υψηλότερη ή χαμηλότερη ανάλυση από τη φυσική ανάλυση του προσαρμοσμένου headset (Η προεπιλογή είναι 1.0). ΣΗΜΕΙΩΣΗ: Μερικές εφαρμογές ίσως να μην ανταποκριθούν σωστά σε μια αλλαγή όσο εκτελούνται και ίσως χρειαστεί επανεκκίνησή τους."
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
 "MenuAction_Workshop_RunTools"	"Δημιουργία/Επεξεργασία μέρους"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"Wiki περιβαλλόντων SteamVR"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
+"Settings_EnableLinuxGPUProfiling"	"Ενεργοποίηση καταγραφής GPU"
+"[english]Settings_EnableLinuxGPUProfiling"	"Enable GPU profiling"
+"Settings_Advanced_AllowSupersampleFiltering"	"Ενεργοποίηση προχωρημένου φιλτραρίσματος υπερδειγματοληψίας"
+"[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable Advanced Supersample Filtering"
+"Explanation_SupersamplingFiltering"	"Επιλογές φιλτραρίσματος υπερδειγματοληψίας:"
+"[english]Explanation_SupersamplingFiltering"	"Supersampling Filtering Options:"
+"MenuAction_ReportABug"	"Αναφορά σφάλματος"
+"[english]MenuAction_ReportABug"	"Report A Bug"
+"MessageBox_Submit"	"Υποβολή"
+"[english]MessageBox_Submit"	"Submit"
+"BugReporter_Title"	"Αναφορά σφάλματος"
+"[english]BugReporter_Title"	"Report A Bug"
+"BugReporter_Explanation"	"Σας ευχαριστούμε που βοηθάτε την Valve να βελτιώσει το SteamVR.\n\nΑυτό το εργαλείο αναφοράς σφαλμάτων δημιουργεί μια αναφορά συστήματος SteamVR που συλλέγει καταγραφές συστήματος, περιβάλλοντος και SteamVR για χρήση διαγνωστικών ελέγχων από την Valve."
+"[english]BugReporter_Explanation"	"Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
+"BugReporter_ForPersonalSupport"	"Αυτό δεν είναι αίτημα υποστήριξης και δεν θα λάβετε άμεση απάντηση. Για να λάβετε εξατομικευμένη υποστήριξη για το SteamVR από κάποιον εκπρόσωπο, παρακαλούμε επισκεφθείτε την ιστοσελίδα υποστήριξης."
+"[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
+"BugReporter_SteamVRSupport"	"Υποστήριξη SteamVR"
+"[english]BugReporter_SteamVRSupport"	"SteamVR Support"
+"BugReporter_Subject"	"Θέμα:"
+"[english]BugReporter_Subject"	"Subject:"
+"BugReporter_CharactersRemaining"	"Απομένουν %1 χαρακτήρες"
+"[english]BugReporter_CharactersRemaining"	"%1 Characters Remaining"
+"BugReporter_Description"	"Περιγραφή:"
+"[english]BugReporter_Description"	"Description:"
+"BugReporter_ReportType"	"Τύπος αναφοράς:"
+"[english]BugReporter_ReportType"	"Report Type:"
+"BugReporter_ReportType_Bug"	"Σφάλμα"
+"[english]BugReporter_ReportType_Bug"	"Bug"
+"BugReporter_ReportType_FeatureRequest"	"Αίτημα χαρακτηριστικού"
+"[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
+"BugReporter_ReportType_Feedback"	"Σχόλια"
+"[english]BugReporter_ReportType_Feedback"	"Feedback"
+"BugReporter_PreviewReport"	"Προεπισκόπηση αναφοράς"
+"[english]BugReporter_PreviewReport"	"Preview Report"
+"BugReporter_IncludeReportAndLogs"	"Συμπερίληψη αναφοράς και καταγραφών συστήματος"
+"[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
+"BugReporter_IncludeCrashDumps"	"Συμπερίληψη αρχείων αποτύπωσης απρόσμενων τερματισμών"
+"[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
+"BugReporter_SubjectRequired"	"Παρακαλούμε εισάγετε ένα θέμα."
+"[english]BugReporter_SubjectRequired"	"Please supply a subject."
+"BugReporter_DescriptionRequired"	"Παρακαλούμε εισάγετε μια περιγραφή."
+"[english]BugReporter_DescriptionRequired"	"Please supply a description."
+"BugReporter_FailedToCreateZip"	"Αποτυχία δημιουργίας συνημμένου ZIP."
+"[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
+"BugReporter_SteamLoginRequired"	"Πρέπει να έχετε συνδεθεί στο λογαριασμό Steam σας για την αναφορά σφαλμάτων."
+"[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
+"BugReporter_SubmissionSuccess"	"Επιτυχία υποβολής.\n\nΕυχαριστούμε."
+"[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
+"BugReporter_SubmissionFailure"	"Αποτυχία υποβολής.\n\nΟ συλλέκτης σφαλμάτων ίσως είναι απασχολημένος. Δοκιμάστε ξανά την υποβολή.\n\nΣφάλμα: %1\n"
+"[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
+"BugReporter_PreviewReportTitle"	"Αναφορά σφάλματος - Προεπισκόπηση αναφοράς"
+"[english]BugReporter_PreviewReportTitle"	"Report A Bug - Preview Report"
+"BugReporter_ProgressSubmitting"	"Υποβολή..."
+"[english]BugReporter_ProgressSubmitting"	"Submitting..."
+"BugReporter_SubmissionTimeout"	"Λήξη χρονικού ορίου υποβολής.\n\nΗ μεταφόρτωση διαρκεί περισσότερο από το αναμενόμενο. Δοκιμάστε ξανά αργότερα.\n"
+"[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
+"BugReporter_ProgressSubmittingPercent"	"Υποβολή...%1%"
+"[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
+"Settings_HomeAppCheck"	"Δοκιμαστική έκδοση SteamVR Home"
+"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_NightModeCheck"	"Λειτουργία νυκτός"
+"[english]Settings_NightModeCheck"	"Night Mode"
+"Settings_NightModeDesc"	"Η λειτουργία νυκτός χαμηλώνει τη φωτεινότητα του headset μέχρι τις 5:00 π.μ. (ή μέχρι να γίνει επανεκκίνηση του SteamVR)."
+"[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 }
 }
