--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -1437,7 +1437,7 @@
 "[english]KnockKnock_Button"	"Knock Knock"
 "KnockKnock_Notification_Text"	"Toc, toc\nQualcuno al di fuori della Realtà Virtuale richiede la tua attenzione."
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
-"MenuAction_Workshop_UploadItem"	"Carica nuovo oggetto"
+"MenuAction_Workshop_UploadItem"	"Carica nuovo sfondo"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
 "MenuAction_Workshop_EditItem"	"Modifica sfondo esistente"
 "[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
@@ -1885,7 +1885,7 @@
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
 "Explanation_Supersampling"	"Il supercampionamento farà sì che tutte le applicazioni in realtà virtuale siano renderizzate ad una risoluzione più alta o più bassa rispetto a quella nativa del visore collegato (1.0 è il valore predefinito). NOTA: alcune applicazioni potrebbero non rispondere correttamente a questa modifica, richiedendoti un riavvio."
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
-"MenuAction_Workshop_RunTools"	"Crea/Aggiorna un ambiente"
+"MenuAction_Workshop_RunTools"	"Crea/Modifica un ambiente"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"Wiki sugli ambienti di SteamVR"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
@@ -1901,6 +1901,8 @@
 "[english]MessageBox_Submit"	"Submit"
 "BugReporter_Title"	"Segnala un bug"
 "[english]BugReporter_Title"	"Report A Bug"
+"BugReporter_Explanation"	"Grazie per aver aiutato Valve a migliorare SteamVR.\n\nQuesto segnalatore di bug genera un rapporto di sistema di SteamVR che raccoglie i dati di sistema, ambientali e di SteamVR per poter essere utilizzati da Valve a fini di diagnostica."
+"[english]BugReporter_Explanation"	"Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
 "BugReporter_ForPersonalSupport"	"Questa non è una richiesta di assistenza e non riceverai una risposta diretta. Se hai bisogno di assistenza specifica da un membro del nostro staff, allora visita il sito dell'Assistenza."
 "[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
 "BugReporter_SteamVRSupport"	"Assistenza di SteamVR"
