--- a/content/vrmonitor/translations/vrmonitor_polish.txt
+++ b/content/vrmonitor/translations/vrmonitor_polish.txt
@@ -191,7 +191,7 @@
 "[english]MenuAction_SteamVRHardwareDiscussions"	"SteamVR Hardware Discussions"
 "MenuAction_SteamVRDeveloperSupport"	"Pomoc deweloperska SteamVR"
 "[english]MenuAction_SteamVRDeveloperSupport"	"SteamVR Developer Support"
-"MenuAction_SteamWorksDeveloperSupport"	"Pomoc dla twórców SteamWorks"
+"MenuAction_SteamWorksDeveloperSupport"	"Pomoc dla partnerów Steamworks"
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
 "MenuAction_CreateSystemReport"	"Stwórz raport systemu"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
@@ -1298,7 +1298,7 @@
 "[english]MenuAction_Workshop"	"Workshop"
 "MenuAction_Workshop_UploadBackground"	"Prześlij tło"
 "[english]MenuAction_Workshop_UploadBackground"	"Upload Background"
-"MenuAction_Workshop_Browse"	"Przeglądaj Warsztat"
+"MenuAction_Workshop_Browse"	"Przeglądaj warsztat"
 "[english]MenuAction_Workshop_Browse"	"Browse Workshop"
 "WorkshopUpload_DialogTitle"	"Narzędzie przesyłania do Warsztatu SteamVR"
 "[english]WorkshopUpload_DialogTitle"	"SteamVR Workshop Upload Tool"
