--- a/content/vrmonitor/translations/vrmonitor_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_romanian.txt
@@ -97,6 +97,8 @@
 "[english]Status_Controller"	"Controller"
 "Status_Base"	"Bază"
 "[english]Status_Base"	"Base"
+"FrameTiming_Title"	"Sincronizare de cadre"
+"[english]FrameTiming_Title"	"Frame Timing"
 "FrameTiming_GPUIdle"	"GPU inactiv"
 "[english]FrameTiming_GPUIdle"	"GPU Idle"
 "FrameTiming_GPU_Compositor"	"Compozitor GPU"
@@ -189,6 +191,8 @@
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
 "MenuAction_CreateSystemReport"	"Creează raportul de sistem"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
+"MenuAction_DisplayFrameTiming"	"Afișează sincronizarea cadrelor"
+"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
 "MenuAction_RecordTrackingData"	"Înregistrează informațiile de urmărire"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Oprește înregistrarea"
@@ -877,6 +881,8 @@
 "[english]Settings_PowerOffControllers_Info"	" "
 "Settings_PowerOffBaseStations_Text"	"Pune stația de bază în mod de așteptare când VR nu este utilizat."
 "[english]Settings_PowerOffBaseStations_Text"	"Put Base Station in Standby mode when VR is not in use."
+"RebootHelper_Status_WaitingForDevice"	"Se așteaptă dispozitivul..."
+"[english]RebootHelper_Status_WaitingForDevice"	"Waiting For Device..."
 "RebootHelper_Status_Connected"	"Conectat!"
 "[english]RebootHelper_Status_Connected"	"Connected!"
 "BluetoothLinkStatus_Unknown"	"Necunoscut"
@@ -917,6 +923,14 @@
 "[english]FirmwareWizard_UpdateBasestation_Bluetooth"	"Wireless"
 "Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Informațiile dispozitivului"
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Device info"
+"Status_Starting"	"Se pornește"
+"[english]Status_Starting"	"Starting"
+"Status_Quitting"	"Se părăsește"
+"[english]Status_Quitting"	"Exiting"
+"Audio_HDMI_Playback_Device_Name"	"Audio HDMI HTC VIVE"
+"[english]Audio_HDMI_Playback_Device_Name"	"HTC VIVE HDMI Audio"
+"Audio_USB_Playback_Device_Name"	"Audio USB HTC VIVE"
+"[english]Audio_USB_Playback_Device_Name"	"HTC VIVE USB Audio"
 "Audio_USB_Record_Device_Name"	"Microfon HTC VIVE"
 "[english]Audio_USB_Record_Device_Name"	"HTC VIVE Microphone"
 "BaseStation_Channel_Text"	"Canalul %1"
@@ -1029,6 +1043,8 @@
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss AP"
 "[english]DismissableWarning_TimeFormat"	"h:mm:ss AP"
+"Settings_Camera_Compatibility"	"<b>Rata camerei</b>"
+"[english]Settings_Camera_Compatibility"	"<b>Camera Rate</b>"
 "Settings_Camera_Compatibility_Slow"	"30Hz"
 "[english]Settings_Camera_Compatibility_Slow"	"30Hz"
 "Settings_Camera_Compatibility_Fast"	"60Hz"
@@ -1131,7 +1147,7 @@
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"Activează reproiecția permanent activată."
 "[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
-"Settings_ForceReprojection_Info"	"Această setare este potrivită doar pentru jocuri non-active, deoarece sacrifică prezicerea\n pozițională superioară pentru a furniza mai mult timp de randare aplicaților mai lente."
+"Settings_ForceReprojection_Info"	"Această setare este potrivită doar pentru jocuri non-active, deoarece favorizează redarea\n procesării unor aplicații mai lente la urmărirea poziționării."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Arată avertizarea pentru cadrele ratate"
 "[english]Settings_CheckForMissedFramesWarning"	"Show missed frame warning"
@@ -1346,18 +1362,32 @@
 "[english]FirmwareWizard_UpdateGenericTracker_Success_UpperText"	"Success!"
 "FirmwareWizard_UpdateGenericTracker_Success_LowerText"	"Apasă pe \"Gata\" pentru a finaliza sau pe \"Actualizează mai mult Firmware\" dacă mai ai hardware de actualizat."
 "[english]FirmwareWizard_UpdateGenericTracker_Success_LowerText"	"Click 'Done' to finish, or 'Update More Firmware' if you have more hardware to update. "
+"Settings_Advanced_Supersampling_Header"	"Supersampling"
+"[english]Settings_Advanced_Supersampling_Header"	"Supersampling"
+"Explanation_Supersampling"	"Supersamplingul va face ca toate aplicațiile VR să se randeze la rezoluție mai mare sau mai mică decât rezoluția nativă a headsetului atașat (1.0 este implicit). Observație: Unele aplicații ar putea să nu răspundă în mod corect unei schimbări în timp ce rulează și ar putea fi nevoie să fie repornite."
+"[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
+"Settings_Advanced_AllowSupersampleFiltering"	"Activează filtrarea supersample avansată"
+"[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable Advanced Supersample Filtering"
+"Explanation_SupersamplingFiltering"	"Opțiuni de filtrare supersample:"
+"[english]Explanation_SupersamplingFiltering"	"Supersampling Filtering Options:"
 "MenuAction_ReportABug"	"Semnalează un bug"
 "[english]MenuAction_ReportABug"	"Report A Bug"
 "MessageBox_Submit"	"Trimite"
 "[english]MessageBox_Submit"	"Submit"
 "BugReporter_Title"	"Semnalează un bug"
 "[english]BugReporter_Title"	"Report A Bug"
+"BugReporter_SteamVRSupport"	"Asistența SteamVR"
+"[english]BugReporter_SteamVRSupport"	"SteamVR Support"
+"BugReporter_Subject"	"Subiect:"
+"[english]BugReporter_Subject"	"Subject:"
 "BugReporter_CharactersRemaining"	"%1 caractere rămase"
 "[english]BugReporter_CharactersRemaining"	"%1 Characters Remaining"
 "BugReporter_Description"	"Descriere:"
 "[english]BugReporter_Description"	"Description:"
 "BugReporter_ReportType_Bug"	"Bug"
 "[english]BugReporter_ReportType_Bug"	"Bug"
+"BugReporter_ReportType_Feedback"	"Feedback"
+"[english]BugReporter_ReportType_Feedback"	"Feedback"
 "BugReporter_ProgressSubmitting"	"Se trimite..."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
 "BugReporter_ProgressSubmittingPercent"	"Se trimite...%1%"
