--- a/content/vrmonitor/translations/vrmonitor_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_russian.txt
@@ -1427,9 +1427,9 @@
 "[english]KnockKnock_Button"	"Knock Knock"
 "KnockKnock_Notification_Text"	"Тук-тук!\nВы понадобились кому-то из реального мира."
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
-"MenuAction_Workshop_UploadItem"	"Загрузить новый"
+"MenuAction_Workshop_UploadItem"	"Загрузить новый фон"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
-"MenuAction_Workshop_EditItem"	"Изменить существующий"
+"MenuAction_Workshop_EditItem"	"Изменить существующий фон"
 "[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
 "MenuAction_ModelDirectory_Browse"	"Просмотреть папку моделей"
 "[english]MenuAction_ModelDirectory_Browse"	"Browse Model Directory"
@@ -1826,9 +1826,9 @@
 "[english]Settings_Advanced_Supersampling_Header"	"Supersampling"
 "Settings_Advanced_Supersampling_RequiresRestart"	"Чтобы изменения вступили в силу, нужно перезапустить SteamVR."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
-"Explanation_Supersampling"	"Полноэкранное сглаживание приведёт к тому, что приложения виртуальной реальности будут использовать разрешение выше (или ниже) базового разрешения подсоединённого шлема.\n(по умолчанию 1.0)"
+"Explanation_Supersampling"	"Суперсемплинг приведёт к тому, что приложения виртуальной реальности будут использовать разрешение выше или ниже базового разрешения подсоединённого шлема (по умолчанию 1.0). ВНИМАНИЕ: после изменения этой настройки может потребоваться перезапуск некоторых приложений."
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
-"MenuAction_Workshop_RunTools"	"Создать/обновить игровой мир"
+"MenuAction_Workshop_RunTools"	"Создать/изменить игровой мир"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"Вики по игровым мирам SteamVR"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
