--- a/content/vrmonitor/translations/vrmonitor_schinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_schinese.txt
@@ -1955,5 +1955,7 @@
 "[english]Settings_NightModeCheck"	"Night Mode"
 "Settings_NightModeDesc"	"夜间模式使头戴式显示器变暗直至凌晨 5 点 （或直至 SteamVR 重启）。"
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
+"Settings_PauseOnStandby"	"当头戴式显示器闲置时暂停渲染"
+"[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 }
 }
