--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -156,7 +156,7 @@
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"Йде запуск"
 "[english]SteamVRSystemState_Startup"	"Starting"
-"SteamVRSystemState_ShutdownRequested"	"Приготування до виходу..."
+"SteamVRSystemState_ShutdownRequested"	"Підготовка до виходу…"
 "[english]SteamVRSystemState_ShutdownRequested"	"Preparing to Quit..."
 "MenuAction_StatusBar"	"Стан"
 "[english]MenuAction_StatusBar"	"Status"
@@ -556,7 +556,7 @@
 "[english]CompositorBackground_Color"	"Color"
 "CompositorBackground_Image"	"Зображення"
 "[english]CompositorBackground_Image"	"Image"
-"Compositor_SelectImage"	"Обрати зображення..."
+"Compositor_SelectImage"	"Обрати зображення…"
 "[english]Compositor_SelectImage"	"Select Image..."
 "Compositor_SelectColorHeader"	"Оберіть колір тла для свого шолома."
 "[english]Compositor_SelectColorHeader"	"Select a color for your in-headset background."
