--- a/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
@@ -577,7 +577,7 @@
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Header"	"Base stations are too far apart"
 "Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Para a melhor experiência, as estações base não podem estar a mais de 5,5 metros uma da outra."
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Description"	"For the best experience, your base stations should not be more than 5.5 meters apart."
-"Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Estações base perderam sinc. ótica"
+"Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Estações base perderam sinc. óptica"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Base stations lost optical sync"
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"Algum objeto pode estar bloqueando a linha de visão entre as duas estações base. Caso este alerta persista entre sessões, tente realizar a sincronização por cabo."
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"There may be something blocking line of sight between the two base stations. If this warning persists between sessions you might consider switching to cabled sync."
@@ -865,5 +865,11 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"Reiniciar"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Requer modo de desenvolvedor do Windows"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows Developer Mode Required"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"O Windows precisa estar no modo de desenvolvedor para usar os drivers de ponte de realidade misturada do Windows."
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"Windows needs to be in developer mode to use the Windows MR bridge driver."
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Colocar o Windows no modo de desenvolvedor"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Set Windows to Developer Mode"
 }
 }
