--- a/content/vrmonitor/translations/vrmonitor_errors_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_romanian.txt
@@ -809,6 +809,10 @@
 "[english]Popover_LowBattery_Tracker_Header"	"Tracker ready with low battery"
 "Popover_LowBattery_Tracker_Description"	"Acest tracker este conectat și urmărește, dar bateria este aproape descărcată."
 "[english]Popover_LowBattery_Tracker_Description"	"This tracker is connected and tracking but the battery is low."
+"Popover_LowBattery_HMD_Header"	"HMD pregătit cu baterie descărcată"
+"[english]Popover_LowBattery_HMD_Header"	"HMD ready with low battery"
+"Popover_LowBattery_HMD_Description"	"Acest HMD este conectat și urmărit, dar bateria este descărcată."
+"[english]Popover_LowBattery_HMD_Description"	"This HMD is connected and tracking but the battery is low."
 "Lighthouse_BasestationInternalFault_06_Header"	"Stația de bază este inutilizabilă"
 "[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
 "Lighthouse_BasestationInternalFault_06_Description"	"O stație de bază a dezvoltat o problemă internă (eroare 06). Te rugăm să oprești și să repornești stația de bază cu indicatorul roșu intermitent. Dacă situația persistă, te rugăm să contactezi producătorul pentru asistență."
@@ -821,5 +825,11 @@
 "[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_07_Action"	"Vizitează htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
+"Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Instalează driverul"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
+"Warning_DismissableWarning_NewDriverInstalled_Header"	"Driver nou instalat"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
+"Warning_DismissableWarning_NewDriverInstalled_Action"	"Repornește"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
 }
 }
