--- a/content/vrmonitor/translations/vrmonitor_errors_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_russian.txt
@@ -853,5 +853,9 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
 "Warning_DismissableWarning_NewDriverInstalled_Description"	"Чтобы использовать новый драйвер, вам потребуется перезапустить SteamVR."
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Необходим режим разработчика Windows"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows Developer Mode Required"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Перейти в режим разработчика"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Set Windows to Developer Mode"
 }
 }
