--- a/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
@@ -856,5 +856,9 @@ Du behöver kontakta HTC."
 "[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"Starta om"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows-utvecklarläge krävs"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows Developer Mode Required"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Aktivera utvecklarläget i Windows"
+"[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Set Windows to Developer Mode"
 }
 }
